can-socket/tests/compile-fail/base_can_id_negative.rs
fn main() {
	let _id = can_socket::base_id!(-2);
}
